[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/monochrome_tilemap_packed.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemy1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/main.gd" type="Script" id=5]
[ext_resource path="res://sounds/battle_theme_regular.mp3" type="AudioStream" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=10]
0/name = "monochrome_tilemap_packed.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 240, 144, 48, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="main" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 4, 0, 0, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 2, 65540, 0, 65536, 65554, 0, 65538, 131076, 0, 65536, 131090, 0, 65538, 196612, 0, 65536, 196626, 0, 65538, 262148, 0, 65536, 262162, 0, 65538, 327684, 0, 65536, 327698, 0, 65538, 393220, 0, 65536, 393234, 0, 65538, 458756, 0, 65536, 458770, 0, 65538, 524292, 0, 65536, 524306, 0, 65538, 589828, 0, 65536, 589842, 0, 65538, 655364, 0, 65536, 655378, 0, 65538, 720900, 0, 65536, 720914, 0, 65538, 786436, 0, 131072, 786437, 0, 131073, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 131073, 786448, 0, 131073, 786449, 0, 131073, 786450, 0, 131074 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 96 )

[node name="Camera2D" parent="player" index="3"]
limit_left = 164
limit_top = -5
limit_right = 360
limit_bottom = 120
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
offset_h = -0.12
offset_v = 1.0
drag_margin_left = 0.81

[node name="health" parent="player/CanvasLayer" index="0"]
margin_left = 80.0
margin_top = 16.0
margin_right = 145.0
margin_bottom = 30.0
align = 1
valign = 1

[node name="powerup" parent="player/CanvasLayer" index="1"]
margin_left = 80.0
margin_top = 184.0
margin_right = 165.0
margin_bottom = 198.0

[node name="score" parent="player/CanvasLayer" index="2"]
margin_left = 224.0
margin_top = 16.0
margin_right = 268.0
margin_bottom = 29.0

[node name="timer" parent="player/CanvasLayer" index="3"]
margin_left = 168.0
margin_top = 16.0
margin_right = 212.0
margin_bottom = 29.0
text = "0"
align = 1
valign = 1

[node name="poweup_heading" parent="player/CanvasLayer" index="4"]
margin_left = 80.0
margin_top = 168.0
margin_right = 161.0
margin_bottom = 180.0

[node name="enemy_powerup" parent="player/CanvasLayer" index="5"]
margin_left = 248.0
margin_top = 184.0
margin_right = 288.0
margin_bottom = 198.0

[node name="enemy_buff_heading" parent="player/CanvasLayer" index="6"]
margin_left = 216.0
margin_top = 168.0
margin_right = 290.0
margin_bottom = 182.0

[node name="enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 32 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 248, 72 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Position2D"]
amount = 10
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, 0 )
linear_accel = -0.53
linear_accel_random = 1.0
radial_accel = 41.8
radial_accel_random = 1.0
tangential_accel = 25.24
tangential_accel_random = 1.0
damping_random = 1.0
angle = 209.7
angle_random = 1.0
scale_amount = 1.5
color = Color( 1, 0, 0.329412, 1 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 136, 144 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Position2D2"]
amount = 10
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, 0 )
linear_accel = -0.53
linear_accel_random = 1.0
radial_accel = 41.8
radial_accel_random = 1.0
tangential_accel = 25.24
tangential_accel_random = 1.0
damping_random = 1.0
angle = 209.7
angle_random = 1.0
scale_amount = 1.5
color = Color( 1, 0, 0.329412, 1 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 112, 80 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Position2D3"]
amount = 10
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, 0 )
linear_accel = -0.53
linear_accel_random = 1.0
radial_accel = 41.8
radial_accel_random = 1.0
tangential_accel = 25.24
tangential_accel_random = 1.0
damping_random = 1.0
angle = 209.7
angle_random = 1.0
scale_amount = 1.5
color = Color( 1, 0, 0.329412, 1 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 232, 144 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Position2D4"]
amount = 10
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, 0 )
linear_accel = -0.53
linear_accel_random = 1.0
radial_accel = 41.8
radial_accel_random = 1.0
tangential_accel = 25.24
tangential_accel_random = 1.0
damping_random = 1.0
angle = 209.7
angle_random = 1.0
scale_amount = 1.5
color = Color( 1, 0, 0.329412, 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 64, 8, 72, 8, 80, 16, 288, 16, 288, 192, 64, 192, 64, 208, 304, 208, 304, 0, 64, 0 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D2"]
position = Vector2( 11.55, 0 )
scale = Vector2( 0.8125, 1 )
polygon = PoolVector2Array( 84.2462, 8, 84.2462, 200, 64, 200, 64, 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]

[editable path="player"]
